Fixed material design ink drop location for the MD download shelf buttons.

A recent regression caused the clip bounds for the
FloodFillInkDropAnimation to incorrectly be centered on the click point
for the DownloadItemViewMd buttons. This change fixes that and
suppresses the ripple for right clicks on the DownloadItemViewMd as
well.

BUG=603818
TEST=manual

Review-Url: https://codereview.chromium.org/1915983009
Cr-Commit-Position: refs/heads/master@{#390347}

Former-commit-id: 5bb27fbab45e1534e353ec3e8e9ab7a57c7a35d4